2009.01.29

* Updated the TODO with thoughts/plans for implementing an info method.
* Started stubbing out the code that will support loading data from files (and
thus an info method).
* Added a reference directory with the dump dtd in it.
* Added acknowledgements to README.
* Removed the testing sandbox in trunk.
* Renamed "read" to "load".
* Added dump function with doctests.

2009.01.28

* Updated the old admin scripts to use bazaar.
* Added more scripts, including definitions for pushing back up to Google Code
(Subversion).
* Added a fix for Windows users. Fixes: http://code.google.com/p/pyrrd/issues/detail?id=1
* Cleaned up the backend module a tiny bit.
* White space cleanup.
* Added a fix for named parameters in the DataSource class. 
  Fixes: http://code.google.com/p/pyrrd/issues/detail?id=2
* Added Google Code to the admin push script.
* Fixed missing named parameter in RRA class.
* Fixed missing named parameter in RRD class.
* Added a NotImplementedError for the fetch method.
* Updated TODO.
* Added missing named parameters in VariableDefinition class.
* Added missing named parameters in CalculationDefinition class.
* Updated test runner.
* Updated README with links.
* Updated commit script to run test runner.
* Added project resource files (images).
* Updated the TODO.
* Fixed a typo.
* Incremented micro version number.
* Added placeholder for info implementation.
* Updated formatting.

2008.04.11

* Moved sandbox.
* Created admin directory.
* Moved stat script into admin directory.
* Added commit script.
* Fixed date in ChangeLog.
* Commented out sync code in commit.sh.
* Renamed lib directory to pyrrd for easier use with non-installed
environments.
* Incremented micro version number.
* Added test runner.
* Fixed bad unit test result in pyrrd.utils.
* Adjusted stat.sh script.
* Updated setup.py.
* Updated date in LICENSE.
* Updated vars in example 1.
* Fixed var names in rrd.external.
* Renamed generateResultLines to iterParse and added some unit tests.